[tool.poetry]
name = "account-operation"
version = "0.1.0"
description = ""
authors = ["Sergey Lapin <serglapinofff@gmail.com>"]
readme = "README.md"
packages = [{include = "account_operation"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.0"
pytest-cov = "4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
